test/fail_compilation/imports/diag7236a.d
module imports.diag7236a;

class C1
{
protected:
    void pm() { }
    int pf;
}
